align correctly

--- a/src/components/ActuPage/ActuPage.module.css
+++ b/src/components/ActuPage/ActuPage.module.css
@@ -1,4 +1,9 @@
-.selector{
+.wrapper {
+  display: flex;
+}
+
+.selector {
   width: 20%;
-  background-color: #f5f5f5;
+  background-color: #222;
+  color: white;
 }
